# sysdoc

./: .env.sample  .gitignore  AGENTIC_CODING.md  CLAUDE.md  INIT.md  README.md
.claude/: settings.json
.claude/commands/: conditional_docs.md  init_project.md  install.md  prepare_app.md  prime.md  start.md  test.md  test_e2e.md
app/agent/: client.py  main.py  pyproject.toml
app/agent/collectors/: cpu.py  disk.py  memory.py  network.py  processes.py  startup.py
app/agent/fixers/: disk_fixer.py  process_fixer.py  startup_fixer.py
app/agent/tests/: test_collectors.py
app/client/: index.html  package.json
app/client/src/: index.css  main.tsx  routeTree.gen.ts
app/client/src/components/: HealthGauge.tsx  IssueCard.tsx  SeverityBadge.tsx  StartupList.tsx  SubScoreBadge.tsx
app/client/src/components/ui/: badge.tsx  button.tsx  progress.tsx  separator.tsx
app/client/src/lib/: api.ts
app/client/src/routes/: __root.tsx  index.tsx  issues.tsx  metrics.tsx  startup.tsx
app/client/src/store/: machine.ts
app/client/src/types/: index.ts
app/server/: main.py  pyproject.toml
app/server/db/migrations/: 001_initial_schema.sql  002_pending_commands.sql
app/server/models/: schemas.py
app/server/routers/: ai.py  dashboard.py  fixes.py  machines.py  scans.py
app/server/services/: ai_explainer.py  analyzer.py  metrics_writer.py  scorer.py
app/server/tests/: test_ai_explainer.py  test_analyzer.py  test_scorer.py
app_docs/: agentic_kpis.md
scripts/: check_ports.sh  start.sh  stop_apps.sh
