[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "supabase>=2.29.0",
    "uvicorn[standard]>=0.46.0",
]
